# test-node

./: .clang-format.base  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Btco.rc  CMakeLists.txt  Info.plist.in  README.md  SECURITY.md  appveyor.yml  bitcoinnano-beta.spec.in  bitcoinnano.spec.in  doxygen.config
.github/: ISSUE_TEMPLATE.md
.github/workflows/: analyzers.yml  beta_artifacts.yml  develop.yml  live_artifacts.yml  release_test.yml  tests.yml
ci/: build-centos.sh  build-deploy.sh  build-gitlab.sh  build-travis.sh  deploy-docker.sh  record_rep_weights.py
ci/actions/linux/: deploy-docker.sh  install_deps.sh
docker/ci/: Dockerfile-clang  Dockerfile-clang-6  Dockerfile-gcc  build.sh
docker/node/: Dockerfile  build.sh  entry.sh
etc/systemd/: bitcoinnano-beta.service  bitcoinnano.service
nano/core_test/: conflicts.cpp  node.cpp  uint256_union.cpp
nano/ipc_flatbuffers_lib/: CMakeLists.txt
nano/lib/: blocks.cpp  config.cpp  config.hpp  errors.cpp  numbers.cpp  numbers.hpp  rpcconfig.cpp  work.cpp
nano/nano_node/: CMakeLists.txt  daemon.cpp  entry.cpp
nano/nano_rpc/: CMakeLists.txt  entry.cpp
nano/nano_wallet/: entry.cpp
nano/node/: CMakeLists.txt  bootstrap.cpp  cli.cpp  json_handler.cpp  json_handler.hpp  logging.cpp  node.cpp  nodeconfig.cpp  nodeconfig.hpp
nano/node/bootstrap/: bootstrap_server.cpp
nano/node/lmdb/: lmdb_env.cpp
nano/node/transport/: tcp.cpp
nano/qt/: qt.cpp
nano/qt_test/: qt.cpp
nano/rpc/: CMakeLists.txt  rpc.cpp
nano/secure/: common.cpp  utility.cpp  utility.hpp
nano/slow_test/: node.cpp
util/: changelog.py  changelog_generator  makesrc
util/build_prep/: common.sh
util/build_prep/macosx/: prep.sh.in
util/build_prep/ubuntu/: prep.sh.in
(+1 files in other folders)
